<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pub_test</name>
  <version>0.0.0</version>
  <description>Pacote para processamento de mídia no ROS2 (display_2 → ui_display)</description>
  <maintainer email="evangelista@todo.todo">Evangelista</maintainer>
  <license>Apache License 2.0</license>

  <!-- Dependências principais -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  
  <!-- Configuração para mensagens customizadas -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Dependências adicionais -->
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Dependências de build -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependências de teste -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <build_type>rosidl_default_generators</build_type>
  </export>
</package>